kuber-homeworks/2.3/src/1-1.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: task1-deployment
  labels:
    app: task1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: task1
  template:
    metadata:
      labels:
        app: task1
    spec:
      containers:
      - name: nginx
        image: nginx:latest
        ports:
        - containerPort: 80
        volumeMounts:
        - name: index-page-volume
          mountPath: /usr/share/nginx/html
      - name: multitool
        image: wbitt/network-multitool
        ports:
        - containerPort: 8080
      volumes:
      - name: index-page-volume
        configMap:
          name: index-page-configmap
---
apiVersion: v1
kind: Service
metadata:
  name: task1-svc
spec:
  selector:
    app: task1
  ports:
  - name: task1-nginx-svc-port
    port: 80
    targetPort: 80
