kuber-homeworks/2.3/src/2.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: task2-deployment
  labels:
    app: task2
spec:
  replicas: 1
  selector:
    matchLabels:
      app: task2
  template:
    metadata:
      labels:
        app: task2
    spec:
      containers:
      - name: nginx
        image: nginx:latest
        ports:
        - containerPort: 80
          name: http-port
        volumeMounts:
        - name: index-page-volume
          mountPath: /usr/share/nginx/html
      volumes:
      - name: index-page-volume
        configMap:
          name: index-page-configmap
---
apiVersion: v1
kind: Service
metadata:
  name: task2-svc
spec:
  selector:
    app: task2
  ports:
  - name: task2-svc-http-port
    port: 80
    targetPort: http-port
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: task2-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: test-app.dev
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: task2-svc
            port:
              number: 80
  tls:
  - hosts:
    - test-app.dev
    secretName: task2-secret-tls
